--- a/public/CSS/loginCSS.css
+++ b/public/CSS/loginCSS.css
@@ -119,7 +119,7 @@ input[type=button]:active, input[type=submit]:active, input[type=reset]:active  
 input[type=text] {
   background-color: #f6f6f6;
   border: none;
-  color: #0d0d0d;
+  color: #ffffff;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
